--- a/style.css
+++ b/style.css
@@ -129,9 +129,18 @@ body {
 
 /* NAVBAR */
 
-ul li {
+nav ul li {
   list-style: none;
-  font-weight: 700;
+}
+nav ul li a {
+  font-weight: 500;
+  text-shadow: 0px 1px 2px rgb(0, 0, 0, 0.1);
+  text-shadow: 0px 1px 1px rgb(0, 0, 0, 0.06);
+  transition: all 0.2s ease;
+}
+nav ul li a:hover {
+  background-color: rgb(255, 255, 255, 0.3);
+  border: solid 1px #d1d5db;
 }
 
 nav {
@@ -139,6 +148,10 @@ nav {
   width: 100%;
   top: 0;
   z-index: 999;
+}
+
+.nav-bar {
+  max-width: 1100px;
 }
 nav ul {
   display: flex;
@@ -154,6 +167,10 @@ nav a {
   border-radius: 30px;
   backdrop-filter: blur(24px);
   border: solid 1px #d1d5db;
+}
+
+.dropdown .dropdown-item.show {
+  display: inline-flex;
 }
 
 .login-button {
@@ -182,6 +199,13 @@ nav a {
   background-color: #1f2937;
 }
 
+/* Hero Element */
+
+@font-face {
+  font-family: "gill-sans-1000";
+  src: url(./font/gill-sans-heavy.otf);
+}
+
 .hero {
   height: 100vh;
   background-image: url("./pic/heroBg.svg");
@@ -198,6 +222,17 @@ nav a {
   height: 20vh;
   padding: 20px;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #fff2de 100%);
+}
+
+.hero-desc {
+  padding: 10px 24px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+  font-family: "gill-sans-1000", "Gill Sans MT", Calibri, "Trebuchet MS",
+    sans-serif;
+  font-size: 20px;
+  color: white;
+  background-color: #089b65;
 }
 
 .video {
@@ -313,7 +348,7 @@ footer p {
   border: solid 1px #517ea0;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 576px) {
   nav ul {
     display: none;
     flex-direction: column;
