Font ultra bold for hero description

--- a/yamaha/style.css
+++ b/yamaha/style.css
@@ -203,7 +203,7 @@ nav a {
 
 @font-face {
   font-family: "gill-sans-1000";
-  src: url(./font/gill-sans-heavy.otf);
+  src: url(./font/GillSansUltraBold.ttf);
 }
 
 .hero {
