--- a/yamaha/style.css
+++ b/yamaha/style.css
@@ -201,11 +201,6 @@ nav a {
 
 /* Hero Element */
 
-@font-face {
-  font-family: "gill-sans-1000";
-  src: url(./font/GillSansUltraBold.ttf);
-}
-
 .hero {
   height: 100vh;
   background-image: url("./pic/heroBg.svg");
@@ -224,12 +219,15 @@ nav a {
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #fff2de 100%);
 }
 
+.hero-content img {
+  max-width: 390px;
+}
+
 .hero-desc {
   padding: 10px 24px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-  font-family: "gill-sans-1000", "Gill Sans MT", Calibri, "Trebuchet MS",
-    sans-serif;
+  font-family: "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 20px;
   color: white;
   background-color: #089b65;
@@ -384,4 +382,30 @@ footer p {
   .mobile-unexpanded-nav {
     width: 100%;
   }
+
+  /* Hero */
+
+  .hero {
+    background-image: url("./pic/hero/hero-mobile-bg.svg");
+  }
+
+  .hero-content {
+    max-width: 80%;
+  }
+
+  .hero-desc {
+    padding: 10px 16px;
+    font-size: 16px;
+  }
+}
+
+/* font setting */
+
+@font-face {
+  font-family: "gill-sans-1000";
+  src: url(./font/GillSansUltraBold.ttf);
+}
+
+.gill-sans-1000 {
+  font-family: "gill-sans-1000";
 }
