--- a/yamaha/style.css
+++ b/yamaha/style.css
@@ -233,29 +233,57 @@ nav a {
   background-color: #089b65;
 }
 
-.video {
+.hero a {
+  transition: all 0.2s ease;
+}
+
+.hero a:hover {
+  background-color: rgb(255, 255, 255, 0.3);
+}
+
+/* Video */
+
+#about {
   background-color: #fff3e5;
 }
 
+.video-container-ratio {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+  width: 100%;
+}
+
 iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   width: 100%;
   height: 100%;
+  border-radius: 12px;
 }
 
-.videoDesc {
-  /* width: 320px;
-  height: 410px; */
-  border-radius: 12px;
+.about-video-container {
+  max-width: 1100px;
+}
 
-  background-color: #63aec9;
+.about-video-description {
+  background-color: #b4dbf5;
+  border-radius: 12px;
   border: solid 2px #c0e7f5;
 }
-
-.videoDesc p {
-  font-weight: 400;
-  color: #fff;
-  line-height: 20px;
-  size: 20px;
+.about-video-description h3 {
+  color: #5180a2;
+  font-size: 20px;
+  line-height: 24px;
+}
+.about-video-description .paragraph {
+  background-color: #dff2ff;
+  color: #5180a2;
+  font-size: 15px;
+  line-height: 18.15px;
 }
 
 .swiper {
