--- a/assets/css/about-swiper.css
+++ b/assets/css/about-swiper.css
@@ -11,13 +11,18 @@
   margin: 0 auto;
 }
 
-.swiper-pagination {
-  position: absolute;
-  bottom: 20px; /* Adjust as needed */
+#swiper-pagination {
+  position: relative;
+  margin-top: 15px;
   left: 50%;
   transform: translateX(-50%);
+  z-index: 100;
 }
 
 .swiper-slide {
   overflow: hidden;
+}
+
+.swiper-pagination-bullet {
+  background-color: #9a0808 !important;
 }
