--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,5 +1,4 @@
-/* NAVBAR */
-
+/* NAVBAR  */
 nav ul li {
   list-style: none;
 }
@@ -77,11 +76,13 @@ nav a {
 @media (max-width: 576px) {
   nav ul {
     display: none;
+    top: 100%;
     flex-direction: column;
     width: 100%;
     text-align: center;
     color: black;
     margin-top: 1rem;
+    transition: 0.5s;
   }
 
   nav ul.active {
@@ -108,3 +109,286 @@ nav a {
     width: 100%;
   }
 }
+
+/* Hijab Hunt */
+
+/* navbar */
+/* #navbar-nav {
+  transition: 0.5s;
+}
+.navbar-brand img {
+  width: 42px;
+  margin-left: 11px;
+}
+
+.fixed-bottom {
+  max-width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 63px;
+  bottom: 50px;
+}
+
+nav {
+  background: rgba(0, 0, 0, 0.2);
+  -webkit-backdrop-filter: blur(23px) !important;
+  backdrop-filter: blur(23px) !important;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: #ffffff;
+}
+
+nav .btn {
+  padding: 10px 20px;
+}
+
+.navbar-light .navbar-nav .show > .nav-link,
+.navbar-light .navbar-nav .active > .nav-link,
+.navbar-light .navbar-nav .nav-link.show,
+.navbar-light .navbar-nav .nav-link.active {
+  color: #ffffff;
+  font-weight: bolder;
+}
+
+.navbar {
+  font-family: "epilogue-400";
+  border: 1px solid white;
+}
+
+.btn-outline-dark {
+  border-radius: 44px;
+  color: #ffffff;
+  border: none;
+  background: rgb(43, 151, 153);
+  background: linear-gradient(
+    312deg,
+    rgba(43, 151, 153, 1) 0%,
+    rgba(22, 98, 116, 1) 65%,
+    rgba(22, 98, 116, 1) 100%
+  );
+}
+
+.btn-outline-dark:hover {
+  background: rgb(43, 151, 153);
+  background: linear-gradient(
+    312deg,
+    rgba(43, 151, 153, 1) 0%,
+    rgba(22, 98, 116, 1) 83%
+  );
+}
+
+.btn-outline-dark:focus {
+  box-shadow: none;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link {
+  padding: 8px 20px;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link:hover {
+  color: #ffffff;
+  border: 1px solid;
+  background: #d1d5db;
+  border-radius: 44px;
+  border-color: #ffffff;
+}
+
+.no-scroll {
+  transform: translateY(0);
+  transition: all 0.3s ease-in-out;
+}
+
+.scrolled-down {
+  transform: translateY(0);
+  transition: all 0.3s ease-in-out;
+  visibility: hidden;
+  opacity: 0;
+}
+.scrolled-up {
+  transform: translateY(0);
+  transition: all 0.3s ease-in-out;
+}
+
+.btn-login {
+  margin-right: 10px;
+}
+
+.box_avatar {
+  position: relative;
+  overflow: hidden;
+  width: 46px;
+  height: 46px;
+  display: unset;
+  cursor: pointer;
+}
+
+.box_avatar img {
+  object-fit: cover;
+  width: 46px;
+  height: 46px;
+  border-radius: 30px;
+}
+
+.box_avatar span {
+  display: none;
+}
+
+.box_avatar_mobile {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 46px;
+  display: flex;
+  cursor: pointer;
+}
+
+.box_avatar_mobile img {
+  object-fit: cover;
+  width: 46px;
+  height: 46px;
+  border-radius: 30px;
+}
+
+.box_avatar_mobile span {
+  display: block;
+  text-align: center;
+  margin: auto;
+  color: #ffffff;
+  width: 180px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+#loginAfter .dropdown-menu.show {
+  display: inline-flex;
+  border-radius: 50px;
+  padding: 0;
+  background: rgba(0, 0, 0, 0.5);
+  -webkit-backdrop-filter: blur(23px) !important;
+  backdrop-filter: blur(23px) !important;
+}
+
+#loginAfter .dropdown-menu {
+  right: 0px;
+  left: unset;
+  margin-bottom: 18px;
+}
+
+#loginAfter .dropdown-item:hover,
+.dropdown-item:focus {
+  color: #16181b;
+  text-decoration: none;
+  border-radius: 50px 0 0 50px;
+}
+
+#loginAfter .dropdown-menu .dropdown-item {
+  margin: auto;
+  color: #ffffff;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+#loginAfter .dropdown-item:hover,
+.dropdown-item:focus {
+  background-color: unset;
+}
+
+#loginAfter .dropdown-menu .dropdown-item .btn {
+  width: 140px;
+}
+
+.dropdown-item-01 {
+  width: 200px;
+}
+
+.dropdown-item-02 {
+  width: 145px;
+  padding: 0.25rem 0 0.25rem 0;
+}
+
+#loginAfterMobile {
+  display: none;
+}
+
+#loginAfter .dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+.nav-pills .nav-link.active,
+.nav-pills .show > .nav-link {
+  color: #fff;
+  background: #166274;
+}
+
+.nav-pills .nav-link {
+  background: #ffffff;
+  border: 1px solid #e5e7eb;
+  border-radius: 44px;
+  font-family: "epilogue-400";
+  font-size: 16px;
+  padding: 14px 20px;
+  margin-right: 0px;
+  line-height: 16px;
+  transition: 0.2s;
+  &:hover {
+    border: 1px solid #ffffff;
+  }
+}
+
+@media screen and (max-width: 996px) {
+  .navbar-brand {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .navbar {
+    padding: 10px;
+  }
+
+  .navbar-light .navbar-toggler {
+    border-radius: 50px;
+    background: #ffffff;
+    margin-right: 0px;
+  }
+
+  .navbar-toggler-icon {
+    width: 15px;
+    height: 31px;
+  }
+
+  .navbar-brand img {
+    width: 42px;
+  }
+
+  .navbar-collapse {
+    text-align: center;
+  }
+
+  #navbarNav button {
+    width: 120px;
+    height: 44px;
+    box-shadow: unset;
+  }
+
+  figure .steps_fill h6 {
+    font-size: 18px;
+    font-family: "broadsheet";
+    width: 441px;
+  }
+
+  .fixed-bottom {
+    border-radius: 30px;
+    margin-left: 35px;
+    margin-right: 35px;
+  }
+}
+
+@media screen and (max-width: 470px) {
+  #navbarNav button {
+    width: unset;
+  }
+} */
+/* navbar */
