--- a/festivalcreative-lps/src/scss/main.scss
+++ b/festivalcreative-lps/src/scss/main.scss
@@ -24,7 +24,7 @@
 
 body {
     background-color: #FFFFFF;
-    background: url(../image/universal/bg-home.png);
+    background: url(../image/universal/bg-home.jpg);
     background-size: cover;
     background-position: top;
     margin-bottom: -250px;
