--- a/festivalcreative-lps/src/css/main.css
+++ b/festivalcreative-lps/src/css/main.css
@@ -1,26 +1,30 @@
 @font-face {
   font-family: "montserat-medium";
-  src: local("montserat-medium"), url(../fonts/Montserrat-Medium.ttf) format("truetype");
+  src: local("montserat-medium"),
+    url(../fonts/Montserrat-Medium.ttf) format("truetype");
 }
 
 @font-face {
   font-family: "montserat-bold";
-  src: local("montserat-bold"), url(../fonts/Montserrat-Bold.ttf) format("truetype");
+  src: local("montserat-bold"),
+    url(../fonts/Montserrat-Bold.ttf) format("truetype");
 }
 
 @font-face {
   font-family: "montserat-semibold";
-  src: local("montserat-semibold"), url(../fonts/Montserrat-SemiBold.ttf) format("truetype");
+  src: local("montserat-semibold"),
+    url(../fonts/Montserrat-SemiBold.ttf) format("truetype");
 }
 
 @font-face {
   font-family: "montserat-regular";
-  src: local("montserat-regular"), url(../fonts/Montserrat-Regular.ttf) format("truetype");
+  src: local("montserat-regular"),
+    url(../fonts/Montserrat-Regular.ttf) format("truetype");
 }
 
 body {
-  background-color: #FFFFFF;
-  background: url(../image/universal/bg-home.png);
+  background-color: #ffffff;
+  background: url(../image/universal/bg-home.jpg);
   background-size: cover;
   background-position: top;
   margin-bottom: -250px;
@@ -55,7 +59,7 @@ body #form .container .requisite-wrap {
 }
 
 body #form .container .requisite-wrap .requisite {
-  background: #F5F9FA;
+  background: #f5f9fa;
   padding: 25px;
   border-radius: 12px 0 0 12px;
   height: 100%;
@@ -63,7 +67,7 @@ body #form .container .requisite-wrap .requisite {
 
 body #form .container .requisite-wrap .requisite .about .title {
   font-size: 23px;
-  color: #1C3C70;
+  color: #1c3c70;
   font-family: "montserat-bold";
 }
 
@@ -74,7 +78,7 @@ body #form .container .requisite-wrap .requisite .about .konten {
 
 body #form .container .requisite-wrap .requisite .snk .title {
   font-size: 23px;
-  color: #1C3C70;
+  color: #1c3c70;
   font-family: "montserat-bold";
 }
 
@@ -106,7 +110,7 @@ body #form .container .fill-wrap {
 }
 
 body #form .container .fill-wrap .fill {
-  background: #FFFFFF;
+  background: #ffffff;
   padding: 25px;
   border-radius: 0 12px 12px 0;
   height: 100%;
@@ -118,33 +122,73 @@ body #form .container .fill-wrap .fill .title-wrap {
 
 body #form .container .fill-wrap .fill .title-wrap .title {
   font-size: 23px;
-  color: #EE420C;
+  color: #ee420c;
   font-family: "montserat-bold";
   width: 100%;
   margin-right: auto !important;
   margin-left: auto !important;
 }
 
-body #form .container .fill-wrap .fill .form-wrap form .custom-file-button input[type="file"] {
+body
+  #form
+  .container
+  .fill-wrap
+  .fill
+  .form-wrap
+  form
+  .custom-file-button
+  input[type="file"] {
   margin-left: -2px !important;
   color: #999999;
 }
 
-body #form .container .fill-wrap .fill .form-wrap form .custom-file-button input[type="file"]::-webkit-file-upload-button {
+body
+  #form
+  .container
+  .fill-wrap
+  .fill
+  .form-wrap
+  form
+  .custom-file-button
+  input[type="file"]::-webkit-file-upload-button {
   display: none;
 }
 
-body #form .container .fill-wrap .fill .form-wrap form .custom-file-button input[type="file"]::file-selector-button {
+body
+  #form
+  .container
+  .fill-wrap
+  .fill
+  .form-wrap
+  form
+  .custom-file-button
+  input[type="file"]::file-selector-button {
   display: none;
 }
 
-body #form .container .fill-wrap .fill .form-wrap form .custom-file-button label {
+body
+  #form
+  .container
+  .fill-wrap
+  .fill
+  .form-wrap
+  form
+  .custom-file-button
+  label {
   font-family: "montserat-regular";
   color: #999999;
   font-size: 12px;
 }
 
-body #form .container .fill-wrap .fill .form-wrap form .custom-file-button:hover label {
+body
+  #form
+  .container
+  .fill-wrap
+  .fill
+  .form-wrap
+  form
+  .custom-file-button:hover
+  label {
   background-color: #dde0e3;
   cursor: pointer;
 }
@@ -152,7 +196,7 @@ body #form .container .fill-wrap .fill .form-wrap form .custom-file-button:hover
 body #form .container .fill-wrap .fill .form-wrap form label {
   font-family: "montserat-semibold";
   font-size: 14px;
-  color: #1C3C70;
+  color: #1c3c70;
 }
 
 body #form .container .fill-wrap .fill .form-wrap form select {
@@ -176,7 +220,7 @@ body #form .container .fill-wrap .fill .form-wrap form input::placeholder {
 
 body #form .container .fill-wrap .fill .form-wrap form .text-area {
   padding: 6px;
-  background: #F0F0F0;
+  background: #f0f0f0;
   border-radius: 8px;
 }
 
@@ -187,7 +231,15 @@ body #form .container .fill-wrap .fill .form-wrap form .text-area textarea {
   border: unset;
 }
 
-body #form .container .fill-wrap .fill .form-wrap form .text-area textarea::placeholder {
+body
+  #form
+  .container
+  .fill-wrap
+  .fill
+  .form-wrap
+  form
+  .text-area
+  textarea::placeholder {
   color: #999999;
 }
 
@@ -211,7 +263,15 @@ body #form .container .fill-wrap .fill .form-wrap form .wrap-count {
   margin-top: 5px;
 }
 
-body #form .container .fill-wrap .fill .form-wrap form .wrap-count #count_message_judul {
+body
+  #form
+  .container
+  .fill-wrap
+  .fill
+  .form-wrap
+  form
+  .wrap-count
+  #count_message_judul {
   background-color: smoke;
   margin-top: 2px;
   margin-right: 5px;
@@ -221,7 +281,15 @@ body #form .container .fill-wrap .fill .form-wrap form .wrap-count #count_messag
   font-family: "montserat-regular";
 }
 
-body #form .container .fill-wrap .fill .form-wrap form .wrap-count #count_message {
+body
+  #form
+  .container
+  .fill-wrap
+  .fill
+  .form-wrap
+  form
+  .wrap-count
+  #count_message {
   background-color: smoke;
   margin-top: 2px;
   margin-right: 5px;
@@ -234,23 +302,23 @@ body #form .container .fill-wrap .fill .form-wrap form .wrap-count #count_messag
 body #form .container .fill-wrap .fill .form-wrap form .alert div {
   font-family: "montserat-semibold";
   font-size: 12px;
-  color: #1F2937;
+  color: #1f2937;
 }
 
 body #form .container .fill-wrap .fill .form-wrap form .alert div p {
   font-family: "montserat-regular";
   font-size: 10px;
-  color: #6B7280;
+  color: #6b7280;
 }
 
 body #form .container .fill-wrap .fill .form-wrap form .form-check-label {
   font-size: 12px;
-  color: #1F2937;
+  color: #1f2937;
 }
 
 body #form .container .fill-wrap .fill .form-wrap form button {
   width: 100%;
-  background-color: #257AE4;
+  background-color: #257ae4;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -327,7 +395,14 @@ body #form-modal #myModal .modal-dialog .modal-content .modal-header button {
   right: 10px !important;
 }
 
-body #form-modal #myModal .modal-dialog .modal-content .modal-header button img {
+body
+  #form-modal
+  #myModal
+  .modal-dialog
+  .modal-content
+  .modal-header
+  button
+  img {
   width: 20px;
 }
 
@@ -340,7 +415,14 @@ body #form-modal #myModal .modal-dialog .modal-content .modal-body .wrap-img {
   margin-bottom: 40px;
 }
 
-body #form-modal #myModal .modal-dialog .modal-content .modal-body .wrap-img img {
+body
+  #form-modal
+  #myModal
+  .modal-dialog
+  .modal-content
+  .modal-body
+  .wrap-img
+  img {
   width: 257px;
 }
 
@@ -348,7 +430,7 @@ body #form-modal #myModal .modal-dialog .modal-content .modal-body h4 {
   font-size: 20px;
   line-height: 28px;
   font-family: "montserat-bold";
-  color: #25438E;
+  color: #25438e;
 }
 
 body #form-modal #myModal .modal-dialog .modal-content .modal-body p {
@@ -374,27 +456,59 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky {
   display: flex;
 }
 
-body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shared {
+body
+  #form-modal
+  #myModal
+  .modal-dialog
+  .modal-content
+  .box-sticky
+  .sticky
+  #shared {
   background: #ffffff;
   padding: 8px;
   border-radius: 50px;
   box-shadow: 0 0.15rem 0.5rem rgba(0, 0, 0, 0.25) !important;
 }
 
-body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shared span {
+body
+  #form-modal
+  #myModal
+  .modal-dialog
+  .modal-content
+  .box-sticky
+  .sticky
+  #shared
+  span {
   font-size: 14px;
   font-family: "montserat-medium";
   color: #292929;
   padding: 0 6px;
 }
 
-body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shared a {
+body
+  #form-modal
+  #myModal
+  .modal-dialog
+  .modal-content
+  .box-sticky
+  .sticky
+  #shared
+  a {
   color: #007bff;
   text-decoration: none;
   background-color: transparent;
 }
 
-body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shared a img {
+body
+  #form-modal
+  #myModal
+  .modal-dialog
+  .modal-content
+  .box-sticky
+  .sticky
+  #shared
+  a
+  img {
   width: 30px !important;
   height: 30px !important;
 }
@@ -402,7 +516,7 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
 /* Responsive Breakpoint */
 @media (min-width: 0px) and (max-width: 575px) {
   body {
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     background: url(../image/universal/bg-home-mobile.png);
     background-size: cover;
     background-position: bottom;
@@ -437,14 +551,14 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
     padding: 20px;
   }
   body #form .container .requisite-wrap .requisite {
-    background: #F5F9FA;
+    background: #f5f9fa;
     padding: 25px;
     border-radius: 12px;
     height: 100%;
   }
   body #form .container .requisite-wrap .requisite .about .title {
     font-size: 23px;
-    color: #1C3C70;
+    color: #1c3c70;
     font-family: "montserat-bold";
   }
   body #form .container .requisite-wrap .requisite .about .konten {
@@ -453,7 +567,7 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
   }
   body #form .container .requisite-wrap .requisite .snk .title {
     font-size: 23px;
-    color: #1C3C70;
+    color: #1c3c70;
     font-family: "montserat-bold";
   }
   body #form .container .requisite-wrap .requisite .snk .konten {
@@ -476,7 +590,7 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
     padding: 20px;
   }
   body #form .container .fill-wrap .fill {
-    background: #FFFFFF;
+    background: #ffffff;
     padding: 25px;
     border-radius: 12px;
     height: 100%;
@@ -486,7 +600,7 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
   }
   body #form .container .fill-wrap .fill .title-wrap .title {
     font-size: 23px;
-    color: #EE420C;
+    color: #ee420c;
     font-family: "montserat-bold";
     width: 100%;
     margin-right: auto !important;
@@ -495,7 +609,7 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
   body #form .container .fill-wrap .fill .form-wrap form label {
     font-family: "montserat-semibold";
     font-size: 14px;
-    color: #1C3C70;
+    color: #1c3c70;
   }
   body #form .container .fill-wrap .fill .form-wrap form input {
     font-family: "montserat-regular";
@@ -506,7 +620,7 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
   }
   body #form .container .fill-wrap .fill .form-wrap form .text-area {
     padding: 6px;
-    background: #F0F0F0;
+    background: #f0f0f0;
     border-radius: 8px;
   }
   body #form .container .fill-wrap .fill .form-wrap form .text-area textarea {
@@ -515,7 +629,15 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
     font-size: 12px;
     border: unset;
   }
-  body #form .container .fill-wrap .fill .form-wrap form .text-area textarea::placeholder {
+  body
+    #form
+    .container
+    .fill-wrap
+    .fill
+    .form-wrap
+    form
+    .text-area
+    textarea::placeholder {
     color: #999999;
   }
   body #form .container .fill-wrap .fill .form-wrap form .form-text {
@@ -528,7 +650,15 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
     background: #f0f0f0;
     margin-top: 5px;
   }
-  body #form .container .fill-wrap .fill .form-wrap form .wrap-count #count_message {
+  body
+    #form
+    .container
+    .fill-wrap
+    .fill
+    .form-wrap
+    form
+    .wrap-count
+    #count_message {
     background-color: smoke;
     margin-top: 2px;
     margin-right: 5px;
@@ -539,11 +669,11 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
   }
   body #form .container .fill-wrap .fill .form-wrap form .form-check-label {
     font-size: 12px;
-    color: #1F2937;
+    color: #1f2937;
   }
   body #form .container .fill-wrap .fill .form-wrap form button {
     width: 100%;
-    background-color: #257AE4;
+    background-color: #257ae4;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -589,7 +719,14 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
   body #form-modal #myModal .modal-dialog .modal-content .modal-header button {
     right: 10px !important;
   }
-  body #form-modal #myModal .modal-dialog .modal-content .modal-header button img {
+  body
+    #form-modal
+    #myModal
+    .modal-dialog
+    .modal-content
+    .modal-header
+    button
+    img {
     width: 20px;
   }
   body #form-modal #myModal .modal-dialog .modal-content .modal-body {
@@ -599,14 +736,21 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
   body #form-modal #myModal .modal-dialog .modal-content .modal-body .wrap-img {
     margin-bottom: 40px;
   }
-  body #form-modal #myModal .modal-dialog .modal-content .modal-body .wrap-img img {
+  body
+    #form-modal
+    #myModal
+    .modal-dialog
+    .modal-content
+    .modal-body
+    .wrap-img
+    img {
     width: 257px;
   }
   body #form-modal #myModal .modal-dialog .modal-content .modal-body h4 {
     font-size: 20px;
     line-height: 28px;
     font-family: "montserat-bold";
-    color: #25438E;
+    color: #25438e;
   }
   body #form-modal #myModal .modal-dialog .modal-content .modal-body p {
     font-size: 12px;
@@ -628,24 +772,56 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
     justify-content: center;
     display: flex;
   }
-  body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shared {
+  body
+    #form-modal
+    #myModal
+    .modal-dialog
+    .modal-content
+    .box-sticky
+    .sticky
+    #shared {
     background: #ffffff;
     padding: 8px;
     border-radius: 50px;
     box-shadow: 0 0.15rem 0.5rem rgba(0, 0, 0, 0.25) !important;
   }
-  body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shared span {
+  body
+    #form-modal
+    #myModal
+    .modal-dialog
+    .modal-content
+    .box-sticky
+    .sticky
+    #shared
+    span {
     font-size: 14px;
     font-family: "montserat-medium";
     color: #292929;
     padding: 0 6px;
   }
-  body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shared a {
+  body
+    #form-modal
+    #myModal
+    .modal-dialog
+    .modal-content
+    .box-sticky
+    .sticky
+    #shared
+    a {
     color: #007bff;
     text-decoration: none;
     background-color: transparent;
   }
-  body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shared a img {
+  body
+    #form-modal
+    #myModal
+    .modal-dialog
+    .modal-content
+    .box-sticky
+    .sticky
+    #shared
+    a
+    img {
     width: 30px !important;
     height: 30px !important;
   }
@@ -673,14 +849,14 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
     padding: 20px 0;
   }
   body #form .container .requisite-wrap .requisite {
-    background: #F5F9FA;
+    background: #f5f9fa;
     padding: 25px;
     border-radius: 12px;
     height: 100%;
   }
   body #form .container .requisite-wrap .requisite .about .title {
     font-size: 23px;
-    color: #1C3C70;
+    color: #1c3c70;
     font-family: "montserat-bold";
   }
   body #form .container .requisite-wrap .requisite .about .konten {
@@ -689,7 +865,7 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
   }
   body #form .container .requisite-wrap .requisite .snk .title {
     font-size: 23px;
-    color: #1C3C70;
+    color: #1c3c70;
     font-family: "montserat-bold";
   }
   body #form .container .requisite-wrap .requisite .snk .konten {
@@ -703,7 +879,7 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
     padding: 20px 0;
   }
   body #form .container .fill-wrap .fill {
-    background: #FFFFFF;
+    background: #ffffff;
     padding: 25px;
     border-radius: 12px;
     height: 100%;
@@ -713,13 +889,13 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
   }
   body #form .container .fill-wrap .fill .title-wrap .title {
     font-size: 23px;
-    color: #BD191A;
+    color: #bd191a;
     font-family: "montserat-bold";
   }
   body #form .container .fill-wrap .fill .form-wrap form label {
     font-family: "montserat-semibold";
     font-size: 14px;
-    color: #1C3C70;
+    color: #1c3c70;
   }
   body #form .container .fill-wrap .fill .form-wrap form input {
     font-family: "montserat-regular";
@@ -730,7 +906,7 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
   }
   body #form .container .fill-wrap .fill .form-wrap form .text-area {
     padding: 6px;
-    background: #F0F0F0;
+    background: #f0f0f0;
     border-radius: 8px;
   }
   body #form .container .fill-wrap .fill .form-wrap form .text-area textarea {
@@ -739,7 +915,15 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
     font-size: 12px;
     border: unset;
   }
-  body #form .container .fill-wrap .fill .form-wrap form .text-area textarea::placeholder {
+  body
+    #form
+    .container
+    .fill-wrap
+    .fill
+    .form-wrap
+    form
+    .text-area
+    textarea::placeholder {
     color: #999999;
   }
   body #form .container .fill-wrap .fill .form-wrap form .form-text {
@@ -752,7 +936,15 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
     background: #f0f0f0;
     margin-top: 5px;
   }
-  body #form .container .fill-wrap .fill .form-wrap form .wrap-count #count_message {
+  body
+    #form
+    .container
+    .fill-wrap
+    .fill
+    .form-wrap
+    form
+    .wrap-count
+    #count_message {
     background-color: smoke;
     margin-top: 2px;
     margin-right: 5px;
@@ -763,7 +955,7 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
   }
   body #form .container .fill-wrap .fill .form-wrap form button {
     width: 100%;
-    background-color: #257AE4;
+    background-color: #257ae4;
     display: flex;
     justify-content: center;
     align-items: center;
