--- a/festivalcreative-lps/src/scss/main.scss
+++ b/festivalcreative-lps/src/scss/main.scss
@@ -136,6 +136,21 @@ body {
 
                     .form-wrap {
                         form {
+                            .input-group{
+                                #inputGroupPrepend2{
+                                    font-family: "montserat-regular";
+                                    font-size: 12px;
+                                    color: #999999;
+                                }
+                            }
+
+                            .input-group{
+                                #inputGroupPrepend3{
+                                    font-family: "montserat-regular";
+                                    font-size: 12px;
+                                    color: #999999;
+                                }
+                            }
 
                             .custom-file-button {
                                 input[type="file"] {
@@ -215,6 +230,10 @@ body {
                                 height: 134px;
                             }
 
+                            #text_poster{
+                                height: 134px;
+                            }
+
                             .form-text {
                                 font-family: "montserat-regular";
                                 font-size: 12px;
@@ -236,7 +255,27 @@ body {
                                     font-family: "montserat-regular";
                                 }
 
+                                #count_message_judul_poster {
+                                    background-color: smoke;
+                                    margin-top: 2px;
+                                    margin-right: 5px;
+                                    float: right !important;
+                                    color: #999999;
+                                    font-size: 12px;
+                                    font-family: "montserat-regular";
+                                }
+
                                 #count_message {
+                                    background-color: smoke;
+                                    margin-top: 2px;
+                                    margin-right: 5px;
+                                    float: right !important;
+                                    color: #999999;
+                                    font-size: 12px;
+                                    font-family: "montserat-regular";
+                                }
+
+                                #count_message_poster {
                                     background-color: smoke;
                                     margin-top: 2px;
                                     margin-right: 5px;
