--- a/festivalcreative-lps/src/scss/main.scss
+++ b/festivalcreative-lps/src/scss/main.scss
@@ -865,6 +865,7 @@ body {
             padding-top: 40px;
 
             .container {
+                max-width: 720px;
                 .requisite-wrap {
                     padding: 20px 0;
 
@@ -1026,6 +1027,149 @@ body {
                         max-width: 607px;
                     }
                 }
+            }
+        }
+
+        #form {
+            padding-top: 40px;
+
+            .container {
+                max-width: 720px;
+                .requisite-wrap {
+                    padding: 20px 0;
+
+                    .requisite {
+                        background: #F5F9FA;
+                        padding: 25px;
+                        border-radius: 12px;
+                        height: 100%;
+
+                        .about {
+                            .title {
+                                font-size: 23px;
+                                color: #1C3C70;
+                                font-family: "montserat-bold";
+                            }
+
+                            .konten {
+                                font-size: 14px;
+                                font-family: "montserat-regular";
+                            }
+                        }
+
+                        .snk {
+                            .title {
+                                font-size: 23px;
+                                color: #1C3C70;
+                                font-family: "montserat-bold";
+                            }
+
+                            .konten {
+                                font-size: 14px;
+                                font-family: "montserat-regular";
+
+                                ol {
+                                    padding: 0 16px;
+                                }
+                            }
+                        }
+                    }
+                }
+
+                .fill-wrap {
+                    padding: 20px 0;
+
+                    .fill {
+                        background: #FFFFFF;
+                        padding: 25px;
+                        border-radius: 12px;
+                        height: 100%;
+
+                        .title-wrap {
+                            text-align: center;
+
+                            .title {
+                                font-size: 23px;
+                                color: #BD191A;
+                                font-family: "montserat-bold";
+                            }
+                        }
+
+                        .form-wrap {
+                            form {
+                                label {
+                                    font-family: "montserat-semibold";
+                                    font-size: 14px;
+                                    color: #1C3C70;
+                                }
+
+                                input {
+                                    font-family: "montserat-regular";
+                                    font-size: 12px;
+                                }
+
+                                input::placeholder {
+                                    color: #999999;
+                                }
+
+                                .text-area {
+                                    padding: 6px;
+                                    background: #F0F0F0;
+                                    border-radius: 8px;
+
+                                    textarea {
+                                        resize: none;
+                                        font-family: "montserat-regular";
+                                        font-size: 12px;
+                                        border: unset;
+                                    }
+
+                                    textarea::placeholder {
+                                        color: #999999;
+                                    }
+                                }
+
+                                .form-text {
+                                    font-family: "montserat-regular";
+                                    font-size: 12px;
+                                    color: #999999;
+                                }
+
+                                .wrap-count {
+                                    height: 20px;
+                                    background: #f0f0f0;
+                                    margin-top: 5px;
+
+                                    #count_message {
+                                        background-color: smoke;
+                                        margin-top: 2px;
+                                        margin-right: 5px;
+                                        float: right !important;
+                                        color: #999999;
+                                        font-size: 12px;
+                                        font-family: "montserat-regular";
+                                    }
+                                }
+
+                                button {
+                                    width: 100%;
+                                    background-color: #257AE4;
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+                                    font-size: 14px;
+
+                                    img {
+                                        width: 18px;
+                                        height: auto;
+                                        margin-left: 10px;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+
             }
         }
     }
