--- a/festivalcreative-lps/src/scss/main.scss
+++ b/festivalcreative-lps/src/scss/main.scss
@@ -28,7 +28,11 @@ body {
     background-size: cover;
     background-position: top;
     margin-bottom: -250px;
-
+    
+    a{
+        text-decoration: none;
+    }
+    
     .container {
         max-width: 1000px;
     }
