--- a/festivalcreative-lps/src/scss/main.scss
+++ b/festivalcreative-lps/src/scss/main.scss
@@ -361,6 +361,7 @@ body {
                                 object-fit: cover;
                                 position: relative;
                                 margin: auto;
+                                border-radius: 8px;
                             }
                             .banner-mobile{
                                 width: 324px;
@@ -368,6 +369,7 @@ body {
                                 object-fit: cover;
                                 position: relative;
                                 margin: auto;
+                                border-radius: 8px;
                             }
                         }
                     }
