--- a/yamaha-youth/assets/css/photo-gallery.css
+++ b/yamaha-youth/assets/css/photo-gallery.css
@@ -14,6 +14,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 0.5rem;
 }
 
 #photo-gallery .gallery-swiper {
@@ -26,7 +27,6 @@
 #photo-gallery .swiper-slide {
   background-size: cover;
   background-position: center;
-  border-radius: 12px;
 }
 
 #photo-gallery .mySwiper2 {
@@ -35,7 +35,6 @@
 }
 
 #photo-gallery .mySwiper {
-  height: 20%;
   box-sizing: border-box;
   padding: 10px 0;
 }
@@ -43,11 +42,11 @@
 #photo-gallery .mySwiper .swiper-slide {
   width: 25%;
   height: 100%;
-  opacity: 0.4;
+  filter: brightness(0.3);
 }
 
 #photo-gallery .mySwiper .swiper-slide-thumb-active {
-  opacity: 1;
+  filter: brightness(1);
 }
 
 #photo-gallery .swiper-slide img {
@@ -69,5 +68,61 @@
   color: #d73e43;
 }
 
+[class^="swiper-button-"]::after {
+  content: "";
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  padding: 0 2rem;
+}
+
+.pg-container {
+  width: 100%;
+}
+
 @media (max-width: 997px) {
+  #photo-gallery .mySwiper2 {
+    height: 548px;
+  }
+  #photo-gallery .mySwiper img {
+    height: 80px;
+  }
+  #photo-gallery h1 {
+    font-size: 48px;
+  }
+}
+@media (max-width: 768px) {
+  #photo-gallery .mySwiper2 {
+    height: 422px;
+  }
+  #photo-gallery .mySwiper img {
+    height: 70px;
+  }
+  #photo-gallery .swiper-button-prev,
+  .swiper-button-next {
+    display: none;
+  }
+  #photo-gallery h1 {
+    font-size: 36px;
+  }
+}
+@media (max-width: 576px) {
+  #photo-gallery .mySwiper2 {
+    height: 316px;
+  }
+  #photo-gallery .mySwiper img {
+    height: 60px;
+  }
+}
+@media (max-width: 460px) {
+  #photo-gallery .mySwiper2 {
+    height: 181px;
+  }
+  #photo-gallery .mySwiper img {
+    height: 50px;
+  }
+  #photo-gallery h1 {
+    font-size: 24px;
+  }
 }
