--- a/yamaha-youth/assets/css/navbar.css
+++ b/yamaha-youth/assets/css/navbar.css
@@ -27,7 +27,8 @@
 .nav-item a {
   border-radius: 50rem;
 }
-.nav-item a:hover {
+.nav-link.active,
+.nav-link:hover {
   background-color: rgb(255, 255, 255, 0.3);
 }
 
