--- a/yamaha-youth/assets/scss/school.scss
+++ b/yamaha-youth/assets/scss/school.scss
@@ -1,4 +1,4 @@
-body{
+body {
   height: 100vh;
   background-image: url("../../assets/images/school-competition/bg-school.jpg");
   background-position: top;
@@ -8,49 +8,73 @@ body{
 
 #school-content {
   margin-top: 180px;
+
   .section-container {
-    .wrap-content{
-      .left-side{
-        .destination{
-          .latarkota{
-            img{
+    .wrap-content {
+      .left-side {
+        .destination {
+          height: 800px;
+          .latarkota {
+            position: relative;
 
+            img {
+              border-radius: 20px;
             }
-          }
-          .about-destination{
-            .title{
-              h4{
 
+            .wrap-desc {
+              position: absolute;
+              top: 140px;
+              .logo-wrap {
+                img {
+                  max-width: 267px;
+                }
               }
-              .captions{
-                p{
+              .about-destination {
+                margin-top: 80px;
+                background: #B4DBF5;
+                margin-left: 10px;
+                margin-right: 10px;
+                border-radius: 8px;
+                .title {
+                  color: #5180A2; 
+                  height: 174px;
+                  padding-top: 10px;
+                  h4 {
+                    font-size: 20px;
+                    font-family: "gill-sans-1000", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+                  }
 
+                  .captions {
+                    background: #fff;
+                    margin: 10px;
+                    border-radius: 8px;
+                    p {
+                      font-size: 12px;
+                      line-height: normal; 
+                      padding: 10px;
+                    }
+                  }
                 }
               }
             }
           }
 
-          .share{
+          .share {}
 
-          }
-
-          .wrap-kategori{
-            .kategori{
-
+          .wrap-kategori {
+            .kategori {
+              font-size: 14px;
             }
           }
         }
       }
 
-      .content{
-        .wrap{
-          .title{
+      .content {
+        .wrap {
+          .title {}
 
-          }
-          .slider-content-1{
-            h4{
-
-            }
+          .slider-content-1 {
+            h4 {}
           }
         }
       }
