--- a/yamaha-youth/assets/scss/school.scss
+++ b/yamaha-youth/assets/scss/school.scss
@@ -16,29 +16,35 @@ body {
           height: 800px;
           .latarkota {
             position: relative;
-
+            height: 180px;
             img {
               border-radius: 20px;
+              width: 100%;
+              object-fit: cover;
+              height: 300px;
             }
 
             .wrap-desc {
               position: absolute;
-              top: 140px;
+              top: 110px;
               .logo-wrap {
                 img {
                   max-width: 267px;
+                  height: unset;
+                  object-fit: unset;
                 }
               }
               .about-destination {
-                margin-top: 80px;
+                margin-top: 30px;
                 background: #B4DBF5;
                 margin-left: 10px;
                 margin-right: 10px;
                 border-radius: 8px;
                 .title {
                   color: #5180A2; 
-                  height: 174px;
+                  height: 100%;
                   padding-top: 10px;
+                  padding-bottom: 2px;
                   h4 {
                     font-size: 20px;
                     font-family: "gill-sans-1000", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
