--- a/yamaha-youth/assets/scss/school.scss
+++ b/yamaha-youth/assets/scss/school.scss
@@ -7,12 +7,15 @@ body {
 }
 
 #school-content {
-  margin-top: 180px;
+  margin-top: 120px;
 
   .section-container {
     .wrap-content {
+      height: 1200px;
       .left-side {
+        position: relative;
         .destination {
+          position: absolute;
           height: 800px;
           .latarkota {
             position: relative;
@@ -73,7 +76,15 @@ body {
             }
           }
         }
+
+        #destination.fixed {
+          position: fixed;
+          top: 0;
+          margin-top: 120px;
+        }
       }
+
+      
 
       .content {
         .wrap {
