--- a/yamaha-youth/src/css/school.css
+++ b/yamaha-youth/src/css/school.css
@@ -65,7 +65,7 @@ body {
   line-height: normal;
   padding: 10px;
 }
-#school-content .section-container .wrap-content .left-side .destination .wrap-kategori .kategori {
+#school-content .section-container .wrap-content .left-side .destination .latarkota .wrap-desc .about-destination .wrap-kategori .kategori {
   font-size: 14px;
 }
 #school-content .section-container .wrap-content .left-side #destination.fixed {
