--- a/yamaha-youth/assets/scss/school.scss
+++ b/yamaha-youth/assets/scss/school.scss
@@ -73,15 +73,22 @@ body {
                     }
                   }
                 }
+              }
 
-                .share {}
+              .share {}
 
                 .wrap-kategori {
                   .kategori {
                     font-size: 14px;
+                    font-weight: 500; 
+                    background: #B4DBF5;
+                    border-radius: 8px;
+                    text-transform: uppercase;
+                    color: #5180A2; 
+                    padding: 10px 10px;
+                    margin: 10px 0;
                   }
                 }
-              }
             }
           }
 
